# EngineMev

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  answers.md  xstocks_probe.json
docs/: ARB-PROJECTS.md  CEXDEX-RUN-2026-04-16.md  DEX-REFERENCE.md  RESEARCH-SOLANA-MEV-DEEP-DIVE.md  SDK-UPGRADE-STATUS.md  STRATEGY-CEX-DEX-ARB.md  STRATEGY-LST-ARB.md  STRATEGY-MEVSHARE-ETH.md  SWAP-IX-REFERENCE.md  TODO-NEXT-SESSION.md  audit-leverageability-2026-04-19.md  audit-performance-2026-04-19.md  audit-rearchitecture-2026-04-19.md  audit-waste-2026-04-19.md  intent-solver-landscape-2026-04-19.md  manifest-markets-2026-04-19.md  opportunity-evm-l1-2026-04-19.md  opportunity-evm-l2-2026-04-19.md  opportunity-exotic-2026-04-19.md  opportunity-solana-2026-04-19.md  retail-experience-reddit-2026-04-19.md  similar-bots-github-2026-04-19.md
docs/cexdex-runs/: 2026-04-16.records.jsonl  2026-04-16.summary.json
docs/superpowers/plans/: 2026-03-31-lst-arb-sanctum.md  2026-04-01-phase1-completion.md  2026-04-02-geyser-pool-state-parsing.md  2026-04-02-orderbook-dex-integration.md  2026-04-02-real-swap-ix.md  2026-04-03-per-relay-bundles.md  2026-04-03-sanctum-shank-ix.md  2026-04-04-address-lookup-tables.md  2026-04-04-arb-guard-program.md  2026-04-04-clmm-fix-lst-rates.md  2026-04-04-surfpool-e2e-tests.md  2026-04-05-prometheus-otlp-metrics.md  2026-04-05-sdk-upgrade-laserstream.md  2026-04-06-arb-guard-passthrough-cpi.md  2026-04-06-pumpswap-amm-integration.md  2026-04-16-cex-dex-arb.md  2026-04-16-dex-module-refactor.md  2026-04-17-cexdex-nonce-fanout.md
docs/superpowers/specs/: 2026-03-31-lst-arb-sanctum-design.md  2026-04-01-phase1-completion-design.md  2026-04-02-geyser-pool-state-parsing-design.md  2026-04-02-orderbook-dex-integration-design.md  2026-04-02-real-swap-ix-design.md  2026-04-03-per-relay-bundle-design.md  2026-04-03-sanctum-shank-ix-design.md  2026-04-04-address-lookup-tables-design.md  2026-04-04-arb-guard-program-design.md  2026-04-04-clmm-fix-lst-rates-design.md  2026-04-04-surfpool-e2e-tests-design.md  2026-04-05-prometheus-otlp-metrics-design.md  2026-04-05-sdk-upgrade-laserstream-design.md  2026-04-05-surfpool-e2e-multihop-design.md  2026-04-06-arb-guard-passthrough-cpi-design.md  2026-04-06-onchain-ix-builder-approach1.md  2026-04-06-pumpswap-amm-integration-design.md  2026-04-06-raydium-amm-swap-v2-design.md  2026-04-16-cex-dex-arb-design.md  2026-04-16-dex-module-refactor-design.md  2026-04-17-cexdex-nonce-fanout-design.md  2026-04-18-manifest-mm-design.md  verified-dex-offsets.md
monitoring/: docker-compose.yml  prometheus.yml
monitoring/provisioning/dashboards/: cexdex-pnl.json
programs/arb-guard/: Cargo.toml
programs/arb-guard/src/: lib.rs
scripts/: analyze_cex_arb_probe.py  analyze_cexdex_run.py
src/: addresses.rs  config.rs  lib.rs  main.rs  rpc_helpers.rs  sanctum.rs
src/cexdex/: bundle.rs  config.rs  detector.rs  geyser.rs  inventory.rs  mod.rs  nonce.rs  price_store.rs  route.rs  simulator.rs  stats.rs  units.rs
src/executor/: bundle.rs  confirmation.rs  mod.rs  relay.rs  relay_dispatcher.rs
src/executor/relays/: astralane.rs  bloxroute.rs  common.rs  jito.rs  mod.rs  nozomi.rs  zeroslot.rs
src/executor/swaps/: manifest.rs  manifest_mm.rs  meteora_damm_v2.rs  meteora_dlmm.rs  mod.rs  orca.rs  phoenix.rs  pumpswap.rs  raydium_amm.rs  raydium_clmm.rs  raydium_cp.rs  sanctum.rs
src/feed/: binance.rs  mod.rs
src/mempool/: decoder.rs  mod.rs  stream.rs
src/mempool/parsers/: manifest.rs  meteora_damm_v2.rs  meteora_dlmm.rs  mod.rs  nonce.rs  orca.rs  phoenix.rs  pumpswap.rs  raydium_amm.rs  raydium_clmm.rs  raydium_cp.rs
src/metrics/: counters.rs  mod.rs  tracing_layer.rs
src/mm/: book_state.rs  config.rs  mod.rs  quoter.rs
src/router/: calculator.rs  mod.rs  pool.rs  simulator.rs
src/router/dex/: clmm_orca.rs  clmm_raydium.rs  cpmm.rs  damm_v2.rs  dlmm.rs  manifest.rs  mod.rs  phoenix.rs  sanctum.rs
src/state/: blockhash.rs  bootstrap.rs  cache.rs  mod.rs  tip_floor.rs
tests/: arb-guard.ts  metrics_endpoint.rs
tests/e2e/: cexdex_nonce_pipeline.rs  cexdex_pipeline.rs  lst_pipeline.rs  mod.rs  spot_pipeline.rs  token_2022_pipeline.rs
tests/e2e_surfpool/: arb_guard_cpi.rs  common.rs  dex_swaps.rs  harness.rs  mod.rs  pipeline.rs
tests/unit/: arb_guard_cpi.rs  blockhash.rs  bootstrap.rs  bug_fixes.rs  bundle_orderbook.rs  bundle_profit.rs  bundle_raydium_amm.rs  bundle_real_ix.rs  bundle_sanctum.rs  cache_pair_index.rs  calculator_lst.rs  cexdex_detector.rs  cexdex_inventory.rs  cexdex_price_store.rs  cexdex_simulator.rs  cexdex_units.rs  clmm_tick_pricing.rs  config_lst.rs  confirmation.rs  cpi_size_fallback.rs  dlmm_bin_pricing.rs  metrics.rs  mod.rs  pool_orderbook.rs  pool_sanctum.rs  price_store.rs  pricing.rs  relay_common.rs  router_perf.rs  rpc_helpers.rs  sanctum_bootstrap.rs  sanity_cap.rs  simulator_lst.rs  staleness.rs  stream_parsing.rs  submission_filter.rs  tip_floor.rs  tip_writelock.rs  tx_size.rs
