[package]
name = "solana-mev-bot"
version = "0.1.0"
edition = "2021"
description = "Halal-compliant Solana MEV backrun arbitrage engine"

[dependencies]
# Solana SDK
solana-sdk = "2.2"

# Jito bundle submission is raw JSON-RPC via reqwest — no SDK dependency needed.
# The jito-sdk-rust crate just wraps the same HTTP calls with extra overhead.

# Yellowstone Geyser (replaces dead Jito mempool stream)
yellowstone-grpc-client = "12.1"
yellowstone-grpc-proto = "12.1"

# gRPC / networking
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
bincode = "1"
base64 = "0.22"

# Data structures
dashmap = "6"
crossbeam-channel = "0.5"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
anyhow = "1"
thiserror = "2"
dotenv = "0.15"

[dev-dependencies]

[features]
default = []
e2e = []

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
required-features = ["e2e"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
