[package]
name = "solana-mev-bot"
version = "0.1.0"
edition = "2021"
description = "Halal-compliant Solana MEV backrun arbitrage engine"

[dependencies]
# Solana SDK
solana-sdk = "2.2"

# Jito bundle submission is raw JSON-RPC via reqwest — no SDK dependency needed.
# The jito-sdk-rust crate just wraps the same HTTP calls with extra overhead.

# LaserStream (replaces yellowstone-grpc-client + yellowstone-grpc-proto)
helius-laserstream = "0.1.9"

# gRPC / networking (tonic 0.12 required by helius-laserstream)
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
bincode = "1"
base64 = "0.22"

# Orderbook DEX SDKs (Phoenix + Manifest)
# NOTE: phoenix-sdk-core, manifest-dex, and phoenix-v1 all require solana-program 1.18.x
# which conflicts with our solana-sdk 2.2 + yellowstone-grpc-client 12.1 stack.
# We use bytemuck for raw byte parsing of Phoenix/Manifest market accounts instead.
bytemuck = { version = "1", features = ["derive"] }

# Async stream processing
futures = "0.3"

# Data structures
dashmap = "6"
crossbeam-channel = "0.5"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async trait for relay abstraction
async-trait = "0.1"

# Utils
anyhow = "1"
thiserror = "2"
dotenv = "0.15"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }

[features]
default = []
e2e = []
e2e_surfpool = []

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_surfpool"
path = "tests/e2e_surfpool/mod.rs"
required-features = ["e2e_surfpool"]

[lints.clippy]
# Allow these in a fast-moving MEV bot codebase
too_many_arguments = "allow"
module_inception = "allow"

[lints.rust]
# Solana SDK deprecation warnings (system_instruction, Keypair::from_bytes)
# are upstream issues — suppress until we upgrade SDK
deprecated = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
