[package]
name = "solana-mev-bot"
version = "0.1.0"
edition = "2021"
description = "Halal-compliant Solana MEV backrun arbitrage engine"

[dependencies]
# Solana SDK
solana-sdk = "4.0"
solana-system-interface = { version = "3.1", features = ["bincode"] }
solana-message = "4.0"
solana-address-lookup-table-interface = "3.0"

# Jito bundle submission is raw JSON-RPC via reqwest — no SDK dependency needed.
# The jito-sdk-rust crate just wraps the same HTTP calls with extra overhead.

# LaserStream (replaces yellowstone-grpc-client + yellowstone-grpc-proto)
helius-laserstream = "0.1.9"

# gRPC / networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# Serialization.
# Phoenix/Manifest market accounts are parsed by raw byte-offset arithmetic
# (the phoenix-v1 / manifest-dex SDKs pin solana-program 1.18 which
# conflicts with solana-sdk 4.x + helius-laserstream).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
bincode = "1"
base64 = "0.22"
borsh = "1"

# Async stream processing
futures = "0.3"

# Data structures
dashmap = "6"
crossbeam-channel = "0.5"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async trait for relay abstraction
async-trait = "0.1"

# Utils
anyhow = "1"
dotenv = "0.15"

# Prometheus metrics (atomic counters, zero hot-path cost)
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }

# OpenTelemetry tracing (optional, enabled by OTLP_ENDPOINT env var)
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = "0.31"
tracing-opentelemetry = "0.32"

[dev-dependencies]
mockito = "1.7.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tempfile = "3"

[features]
default = []
e2e = []
e2e_surfpool = []

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "metrics_endpoint"
path = "tests/metrics_endpoint.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_surfpool"
path = "tests/e2e_surfpool/mod.rs"
required-features = ["e2e_surfpool"]

[[bin]]
name = "cexdex"
path = "src/bin/cexdex.rs"

[[bin]]
name = "solana-mev-bot"
path = "src/main.rs"

[[bin]]
name = "xstocks_probe"
path = "src/bin/xstocks_probe.rs"

[[bin]]
name = "manifest_mm"
path = "src/bin/manifest_mm.rs"

[[bin]]
name = "manifest_discover"
path = "src/bin/manifest_discover.rs"

[lints.clippy]
# Allow these in a fast-moving MEV bot codebase
too_many_arguments = "allow"
module_inception = "allow"

[lints.rust]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
